force-app/main/default/objects/Account/fields/est_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Test Field</label>
    <length>11</length>
    <type>Text</type>
</CustomField>