force-app/main/default/objects/Account/fields/TestFieildForAgentforceOrg__c.field-meta.xml
<CustomField>
    <fullName>TestFieildForAgentforceOrg__c</fullName>
    <label>TestFieildForAgentforceOrg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>