force-app/main/default/objects/Account/fields/TestFieldAgentforce2__c.field-meta.xml
<CustomField>
    <fullName>TestFieldAgentforce2__c</fullName>
    <label>TestFieldAgentforce2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>